tests/reject/notseven.ul
int foobar(){

int x;
int y;

x = 2;
y = 3.14;

if(x < y){
	y=y-x;
}else

}
